--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <meta name= "google-site-verification" content ="google9061f0dfaf83cd42.html" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Way Belerang Simpur | Wisata Alam Lampung Selatan</title>
