--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta name= "google-site-verification" content ="google9061f0dfaf83cd42.html" />
+  <meta name="google-site-verification" content="S_VkfWsMydbjf6CRjlhuzdNa4-ZkOrU_CPv7jwLyv7Y" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Way Belerang Simpur | Wisata Alam Lampung Selatan</title>
