--- a/index.html
+++ b/index.html
@@ -171,12 +171,44 @@
 <section id="galeri">
   <h2>Galeri Wisata</h2>
   <div class="gallery">
-    <img src="images/galeri1.jpg" alt="Way Belerang Simpur" />
-    <img src="images/galeri2.jpg" alt="Pemandian Belerang" />
-    <img src="images/galeri3.jpg" alt="Suasana Alam" />
-    <img src="images/galeri4.jpg" alt="Wisata Desa" />
+    <img src="images/galeri1.jpg" alt="Kolam Pemandian Air Panas" />
+    <img src="images/galeri2.jpg" alt="Kolam Pemandian Air Gunung" />
+    <img src="images/galeri3.jpg" alt="Tempat/Lahan Parkir" />
+    <img src="images/galeri4.jpg" alt="Belerang/Sulfur" />
+    <img src="images/galeri5.jpg" alt="Air Terjun" />
+    <img src="images/galeri6.jpg" alt="Sumber Mata Air Belerang" />
+    <img src="images/galeri7.jpg" alt="Mushola" />
+    <img src="images/galeri9.jpg" alt="Homestay" />
+    <img src="images/galeri10.jpg" alt="Gazebo" />
   </div>
+  
+  <h2 style="margin-top:50px;">Video Wisata</h2>
+<div class="video-grid">
+<!-- Video 1 -->
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@pokdarwiskecapisaka/video/7597214814397533458"
+    data-video-id="7597214814397533458">
+<section></section>
+</blockquote>
+
+
+<!-- Video 2 -->
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@pokdarwiskecapisaka/video/7596852162060242183"
+  data-video-id="7596852162060242183">
+<section></section>
+</blockquote>
+
+
+<!-- Video 3 -->
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@pokdarwiskecapisaka/video/7596551735284403474"
+  data-video-id="7596551735284403474">
+<section></section>
+</blockquote>
+</div>
 </section>
+
+
+<script async src="https://www.tiktok.com/embed.js"></script>
+
 
 <section id="info" style="background:#f0f7f3">
   <h2>Informasi Pengunjung</h2>
@@ -191,20 +223,44 @@
 <section id="peta">
   <h2>Peta Lokasi</h2>
   <iframe src="https://www.google.com/maps?q=Desa%20Kecapi%20Kalianda&output=embed"></iframe>
+  <h2>Denah Way Belerang Simpur</h2>
+  <div class="gallery">
+    <img src="images/galeri8.jpg" alt="Denah Way Belerang Simpur" />
+  </div>
 </section>
 
 <section id="kontak" style="background:#f0f7f3">
-  <h2>Kontak & Testimoni</h2>
-  <form>
-    <input type="text" placeholder="Nama" required />
-    <input type="email" placeholder="Email" required />
-    <textarea rows="4" placeholder="Pesan atau Testimoni"></textarea>
-    <button type="submit">Kirim</button>
-  </form>
+<h2>Kontak, Testimoni & UMKM Desa</h2>
+<div class="grid">
+<div class="card">
+<h3>Testimoni Wisatawan</h3>
+<p>“Air belerangnya hangat dan alami, cocok untuk relaksasi bersama keluarga.”</p>
+<p><em>– Wisatawan Lokal</em></p>
+</div>
+<div class="card">
+<h3>Dukung UMKM Desa</h3>
+<p>Pengunjung dapat menikmati produk UMKM lokal seperti makanan tradisional, belerang/sulfur, dan kerajinan desa.</p>
+</div>
+</div>
+<br/>
+<form>
+<input type="text" placeholder="Nama" required />
+<input type="email" placeholder="Email" required />
+<textarea rows="4" placeholder="Pesan atau Testimoni"></textarea>
+<button type="submit">Kirim</button>
+</form>
 </section>
 
+
 <footer>
-  <p>© 2026 Way Belerang Simpur – Desa Kecapi, Lampung Selatan</p>
+<div style="margin-bottom:10px;">
+<strong>Ikuti Kami</strong><br/>
+<a href="https://www.facebook.com/Pokdarwis Kecapi Saka" target="_blank" style="margin:0 8px;">📘 Facebook</a>
+<a href="https://www.instagram.com/pokdarwiskecapisaka" target="_blank" style="margin:0 8px;">📸 Instagram</a>
+<a href="https://www.tiktok.com/@pokdarwiskecapisaka" target="_blank" style="margin:0 8px;">🎵 TikTok</a>
+<a href="https://wa.me/6282160852460" target="_blank" style="margin:0 8px;">💬 WhatsApp</a>
+</div>
+<p>© 2026 Way Belerang Simpur – Desa Kecapi, Lampung Selatan</p>
 </footer>
 
 <a class="wa-button" href="https://wa.me/6282160852460" target="_blank">WA</a>
