--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 <footer>
 <div style="margin-bottom:10px;">
 <strong>Ikuti Kami</strong><br/>
-<a href="https://www.facebook.com/Pokdarwis Kecapi Saka" target="_blank" style="margin:0 8px;">📘 Facebook</a>
+<a href="https://www.facebook.com/pokdarwiskecapi" target="_blank" style="margin:0 8px;">📘 Facebook</a>
 <a href="https://www.instagram.com/pokdarwiskecapisaka" target="_blank" style="margin:0 8px;">📸 Instagram</a>
 <a href="https://www.tiktok.com/@pokdarwiskecapisaka" target="_blank" style="margin:0 8px;">🎵 TikTok</a>
 <a href="https://wa.me/6282160852460" target="_blank" style="margin:0 8px;">💬 WhatsApp</a>
